melhorado visualização da meta

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Meta de Fornecedores</title>
   <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="meta.css">
+
 </head>
 <body>
 
@@ -45,7 +47,9 @@
     <h2>Upload de Arquivo</h2>
     <input type="file" id="fileInput" accept=".xlsx">
     <button id="uploadButton">Enviar Arquivo</button>
+    <span id="uploadMessage"></span> <!-- Elemento para mensagens -->
   </div>
+  
 
   <script type="module" src="./main.js"></script>
 </body>
