--- a/index.html
+++ b/index.html
@@ -1,56 +1,149 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Meta de Fornecedores</title>
-  <link rel="stylesheet" href="login.css">
-  <link rel="stylesheet" href="meta.css">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Meta de Fornecedores</title>
 
-</head>
-<body>
+    <!-- Favicon -->
+    <link rel="icon" href="/brf1.ico" />
 
-  <div id="loginForm">
-    <h2>Login</h2>
-    <input type="text" id="username" placeholder="Nome de usuário">
-    <input type="password" id="password" placeholder="Senha">
-    <button id="loginButton">Entrar</button>
-  </div>
-  
-  <div id="registerForm" style="display:none;">
-    <h2>Registrar</h2>
-    <input type="text" id="registerUsername" placeholder="Nome de usuário para registro">
-    <input type="password" id="registerPassword" placeholder="Senha para registro">
-    <input type="text" id="registerEmail" placeholder="E-mail para registro">
-    <button id="registerButton">Registrar-se</button>
-  </div>
+    <!-- Bootstrap 5 via CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
-  <div id="forgotPasswordForm" style="display:none;">
-    <h2>Esqueci a senha</h2>
-    <input type="text" id="forgotUsername" placeholder="Nome de usuário para recuperar senha">
-    <button id="forgotPasswordButton">Esqueci a senha</button>
-  </div>
+    <!-- CSS personalizados -->
+    <link rel="stylesheet" href="/login.css" />
+    <link rel="stylesheet" href="/meta.css" />
+  </head>
+  <body class="bg-light">
+    <!-- LOGIN -->
+    <div id="loginForm" class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-5">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h2 class="card-title text-center mb-4">Login</h2>
 
-  <div id="resendCodeForm" style="display:none;">
-    <h2>Reenviar Código</h2>
-    <input type="text" id="resendUsername" placeholder="Nome de usuário para reenviar código">
-    <button id="resendCodeButton">Reenviar código</button>
-  </div>
+              <div class="mb-3">
+                <input
+                  class="form-control"
+                  id="username"
+                  placeholder="Usuário"
+                />
+              </div>
+              <div class="mb-3">
+                <input
+                  type="password"
+                  class="form-control"
+                  id="password"
+                  placeholder="Senha"
+                />
+              </div>
+              <div class="mb-3" id="newPassWrapper" style="display: none">
+                <input
+                  type="password"
+                  class="form-control"
+                  id="newPassword"
+                  placeholder="Nova senha"
+                />
+              </div>
+              <button id="loginButton" class="btn btn-primary w-100">
+                Entrar
+              </button>
 
-  <div id="validateCodeForm" style="display:none;">
-    <h2>Validar Código</h2>
-    <input type="text" id="validateUsername" placeholder="Nome de usuário para validar código">
-    <input type="text" id="validateCode" placeholder="Código para validação">
-    <button id="validateCodeButton">Validar código</button>
-  </div>
+              <div id="msgLogin" style="display: none"></div>
 
-  <div id="uploadForm" style="display:none;">
-    <h2>Upload de Arquivo</h2>
-    <input type="file" id="fileInput" accept=".xlsx">
-    <button id="uploadButton">Enviar Arquivo</button>
-    <span id="uploadMessage"></span> <!-- Elemento para mensagens -->
-  </div>
-  
+              <div class="text-center mt-3">
+                <a href="#" id="forgotLink">Esqueci a senha</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <script type="module" src="./main.js"></script>
-</body>
+    <!-- FORGOT PASSWORD -->
+    <div id="forgotForm" class="container py-5" style="display: none">
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-5">
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h2 class="card-title text-center mb-4">Redefinir senha</h2>
+
+              <div class="mb-3">
+                <input
+                  class="form-control"
+                  id="forgotUser"
+                  placeholder="Usuário ou e-mail"
+                />
+              </div>
+              <button id="forgotStart" class="btn btn-primary w-100 mb-3">
+                Enviar código
+              </button>
+
+              <div id="codeArea" style="display: none">
+                <div class="mb-3">
+                  <input
+                    class="form-control"
+                    id="forgotCode"
+                    placeholder="Código recebido"
+                  />
+                </div>
+                <div class="mb-3">
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="forgotNewPass"
+                    placeholder="Nova senha"
+                  />
+                </div>
+                <button id="forgotSubmit" class="btn btn-success w-100 mb-3">
+                  Confirmar nova senha
+                </button>
+              </div>
+
+              <div id="msgForgot" style="display: none"></div>
+
+              <div class="text-center">
+                <a href="#" id="backToLogin">Voltar ao login</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- UPLOAD -->
+    <div id="uploadForm" class="container py-5" style="display: none">
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-5">
+          <div class="card shadow-sm">
+            <div class="card-body text-center">
+              <h2 class="card-title mb-4">Upload de Arquivo</h2>
+
+              <input
+                type="file"
+                class="form-control mb-3"
+                id="fileInput"
+                accept=".xlsx"
+              />
+              <button id="uploadButton" class="btn btn-primary w-100">
+                Enviar Arquivo
+              </button>
+
+              <span id="uploadMessage" class="d-block mt-3"></span>
+
+              <button id="logoutBtn" class="btn btn-outline-secondary mt-4">
+                Sair
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
